--- a/q2Books/views/index.jade
+++ b/q2Books/views/index.jade
@@ -1,5 +1,14 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+doctype html
+html
+  head
+    meta(charset='utf-8')
+    title
+    link(rel='stylesheet', href='./main.css', media='screen', title='no title', charset='utf-8')
+  body
+    header
+      h1 Galvanize-Reads
+    .selectors
+      a(href='books')
+        img(src='https://images.unsplash.com/photo-1450107579224-2d9b2bf1adc8?crop=entropy&fit=crop&fm=jpg&h=800&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1075', alt='')
+      a(href='author')
+        img(src='https://images.unsplash.com/photo-1448932223592-d1fc686e76ea?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=9d35602ec5163e4a6c176bd64ad9b798', alt='')
