--- a/q2Books/views/index.jade
+++ b/q2Books/views/index.jade
@@ -3,6 +3,7 @@ html
   head
     meta(charset='utf-8')
     title
+    link(rel='stylesheet', href='/stylesheets/normalize.css', media='screen', title='no title', charset='utf-8')
     link(rel='stylesheet', href='/stylesheets/main.css', media='screen', title='no title', charset='utf-8')
   body
     header
