--- a/q2Books/public/stylesheets/addBook.css
+++ b/q2Books/public/stylesheets/addBook.css
@@ -62,13 +62,6 @@ main {
   margin-right: 5vw;
 }
 
-.bookTotalInfo {
-  position: relative;
-  margin-bottom: 2rem;
-  height:  auto;
-  border: .1rem solid black;
-}
-
 .addBook {
   position: absolute;
     top: 1rem;
@@ -80,44 +73,32 @@ main {
   width: 10rem;
 }
 
-.bookImage {
-  width: 15vw;
-  display: inline;
+.addBookForm {
   float: left;
+  margin-left: 25%;
 }
 
-.bookImage img {
-  width: 15vw;
-  position: absolute;
-    top: 3rem;
-
+.addBookForm input, textarea{
+  display: block;
+  width: 35vw;
+  height: 2rem;
+  position: relative;
+  margin-bottom: .5rem;
+  font-size: 1rem;
 }
 
-.bookInfo {
-  width: 55vw;
-  float: left;
-  display: inline;
-  position: absolute;
-  top: 15%;
-  left: 25%;
+textarea {
+  height: 5rem;
+  font-size: .8rem;
 }
 
-ul {
-  list-style-type: none;
-  float: right;
-  position: absolute;
-    top: 0;
-    right: 0;
+.addBookForm input[type=submit] {
+  height: 2rem;
 }
 
-li {
-  display: inline;
-  margin-right: 1rem;
-}
 
-li a {
-  color: darkblue;
-}
+
+
 
 
 
